macros/tests/unhappy/dup_skip_attr.stderr
error: duplicate skip attribute
 --> tests/unhappy/dup_skip_attr.rs:8:25
  |
8 |     #[wasm_export(skip, skip)]
  |                         ^^^^
